--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script>
         const canvasEl = document.querySelector("canvas"),
         canvasCtx = canvasEl.getContext("2d")
+        const lineWidth = x
 
         function setup() {
             canvasEl.width = canvasCtx.width = window.innerWidth
@@ -21,6 +22,13 @@
         function draw() {
             canvasCtx.fillStyle = "#286047"
             canvasCtx.fillRect(0, 0, window.innerWidth, window.innerHeight)
+
+            const x = window.innerWidth / 2 - lineWidth / 2
+            const y = 0
+            const largura = lineWidth
+            const altura = window.innerHeight
+            canvasCtx.fillStyle = "#ffffff"
+            canvasCtx.fillRect(x, y, largura, altura)
         }
         setup()
         draw()
