--- a/index.html
+++ b/index.html
@@ -115,7 +115,25 @@
         }
         setup()
         draw()
-        window.setInterval(draw, 1000 / 60)
+        window.animateFrame = (function () {
+            return(
+                window.requestAnimationFrame ||
+                window.webitRequestAnimationFrame ||
+                window.mozRequestAnimationFrame ||
+                window.oRequestAnimationFrame ||
+                window.msRequestAnimationFrame ||
+                function (callback) {
+                    return window.setTimeout(callback, 1000 / 60)
+                }
+            )
+
+        })()
+        function main () {
+            animateFrame(main)
+            draw()
+        }
+        setup()
+        main()
     </script>
 </body>
 </html>
