--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         const canvasEl = document.querySelector("canvas"),
         canvasCtx = canvasEl.getContext("2d"),
         gapX = 10
+        const mouse = {x: 0, y: 0}
         
 
         const grama = {
@@ -36,12 +37,17 @@
         // Aqui é criada a raquete esquerda
         const raqueteEsquerda = {
             x: gapX,
-            y: 100,
+            y: 0,
             largura: linha.largura,
             altura: 200,
-            draw: function() {
+            _move: function () {
+                this.y = mouse.y - this.altura / 2
+            },
+            draw: function () {
                 canvasCtx.fillStyle = "#ffffff"
                 canvasCtx.fillRect(this.x, this.y, this.largura, this.altura)
+
+                this._move()
 
             },
 
@@ -134,6 +140,11 @@
         }
         setup()
         main()
+
+        canvasEl.addEventListener('mousemove', function(e) {
+           mouse.x = e.pageX
+           mouse.y = e.pageY 
+        }) 
     </script>
 </body>
 </html>
