--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
             y: 100,
             largura: linha.largura,
             altura: 200,
-            draw: function() {
+            _move: function () {
+                this.y = bola.y
+            },
+            draw: function () {
                 canvasCtx.fillStyle = "#ffffff"
                 canvasCtx.fillRect(this.x, this.y, this.largura, this.altura)
+                this._move()
 
             },
         }
