--- a/index.html
+++ b/index.html
@@ -88,13 +88,32 @@
         
         // iremos criar a bola
         const bola = {
-            x: 350,
-            y: 120,
+            x: 0,
+            y: 0,
             r: 20,
             speed: 5,
+            directionX: 1,
+            directionY: 1,
+            _calcPosition: function() {
+                if(
+                (this.y - this.r < 0 && this.directionY < 0) ||
+                (this.y > grama.altura - this.r && this.directionY > 0)) {
+                    this._reverseY()
+                    
+                }
+            },
+
+            _reverseX: function(){
+                this.directionX *= -1
+            },
+
+            _reverseY: function() {
+                this.directionY *= -1
+            },
+
             _move: function() {
-                this.x += 1 * this.speed
-                this.y += 1 * this.speed
+                this.x += this.directionX * this.speed
+                this.y += this.directionY * this.speed
 
             },
             draw: function() {
@@ -102,7 +121,9 @@
                 canvasCtx.beginPath()
                 canvasCtx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false)
                 canvasCtx.fill()
+                this._calcPosition()
                 this._move()
+
             },
         }
 
