--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         const placar = {
             humano: 1,
             computador: 2,
+            pontoHumano: function() {
+                this.humano++
+            },
+            pontoComputador: function() {
+                this.computador++
+            },
             draw: function() {
                 canvasCtx.font = "bold 72px Arial"
                 canvasCtx.textAlign = "center"
@@ -95,9 +101,20 @@
             directionX: 1,
             directionY: 1,
             _calcPosition: function() {
+                //regra do jogador 1
+                if (this.x > grama.largura - this.r - raqueteEsquerda.largura - gapX) {
+                    if(this.y + this.r > raqueteEsquerda.y && this.y - this.r < raqueteEsquerda.y +raqueteEsquerda.altura){
+                        this._reverseX()
+                    }else {
+                        score.pontoHumano()
+                        this._inicio()
+                    }
+                }
+                // verifica as laterais superiores e inferiores do campo
                 if(
                 (this.y - this.r < 0 && this.directionY < 0) ||
                 (this.y > grama.altura - this.r && this.directionY > 0)) {
+                    // rebate invertendo o sinal do eixo y
                     this._reverseY()
                     
                 }
@@ -109,6 +126,11 @@
 
             _reverseY: function() {
                 this.directionY *= -1
+            },
+
+            _inicio: function () {
+                this.x = grama.altura / 2
+                this.y = grama.largura / 2
             },
 
             _move: function() {
